<resources>
    <string name="app_name">BRICOLI</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="TitleBids">Bids</string>
    <string name="TitleBricoli">Bricoli</string>
    <string name="TitleCurrentJob">Current Job</string>
    <string name="TitleHistory">History</string>
    <string name="TitleHome">Home</string>
    <string name="TitleSettings">Settings</string>
    <string name="TitleChangeRole">Change Rôle</string>
    <string name="DescriptionChangeRole">Welcome to the change role page where you can apply to be a worker</string>
    <string name="NameClient">Client</string>
    <string name="NameWorker">Worker</string>
    <string name="SaveButton">Save</string>
    <string name="TitleChangePassword">Change Password</string>
    <string name="LabelPAssword">Password</string>
    <string name="LabelReTapePassword">Re-tape Password</string>


    <string name="name_complet">Full name</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="cin">CIN</string>
    <string name="password">Password</string>
    <string name="password_confirmation">Password Confirmation</string>
    <string name="signup">Signup</string>
    <string name="client">Client</string>
    <string name="worker">Worker</string>
    <string name="bricoli">BRICOLI.</string>
    <string name="title_home">Home</string>
    <string name="title_list">List</string>
    <string name="title_history">History</string>
    <string name="title_user">Profile</string>
    <string name="add_description">Add description</string>
    <string name="choose_service_text">Choose your service</string>
    <string name="choose_service_spinner">Choose type of service</string>
    <string name="add">Add</string>
    <string name="notif_text">You have received a bid from ...</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="invite_your_friend_and_earn_nbonus_amount_in_wallet">Invite your Friends and earn \nbonus amount in wallet</string>
    <string name="refer_friends">Refer Friends</string>
    <string-array name="categories">
        <item>Plumber</item>
        <item>Party Planner</item>
        <item>Electrician</item>
        <item>Mason</item>
        <item>Carpenter</item>
        <item>Blacksmith</item>
        <item>Dyer</item>
        <item>Chef</item>
        <item>Decorator</item>
        <item>In charge of cleaning</item>
    </string-array>
    <string name="account">Account</string>
    <string name="more">More</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="change_role">Change Role</string>
    <string name="add_recent_job">Add Recent Job</string>
    <string name="language">Language</string>
    <string name="share_with_friends">Share With Friends</string>
    <string name="log_out">Log Out</string>
    <string name="Title_add_recent_job">Add recent jobs</string>
    <string name="add_picture_button">Add Picture</string>

    <string name="apply">Apply</string>
    <string name="duration">Duration</string>
    <string name="full_name">Full Name</string>
    <string name="dh">DH</string>
    <string name="jrs">Jrs</string>

    <string name="work_finished">Finished in : </string>
    <string name="description">Description : </string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="price">Price :</string>

    <string name="finishbutton">finish</string>
    <string name="jours">Days</string>
    <string name="forgotpassword">Forgot your password ?</string>
    <string name="find">Find</string>
    <string name="save">save</string>

    <string name="verification">Verification</string>
    <string name="verificationmessage">You received an SMS message with your verfication code</string>
    <string name="Submit">Submit</string>
    <string name="changepassword">Change password</string>
    <string name="newpassword">new password</string>
    <string name="confirmpassword">confirm new password</string>
    <string name="thewrongnumber">This is a non registered number</string>
    <string name="thewrongcode">Wrong verification code</string>
    <string name="upload_image">Upload image</string>

    <string name="toast_client_home_catgo_desc">Please fill both category and description</string>
    <string name="toast_client_home_add_offer">Offer added </string>
    <string name="toast_client_home_fail_add_offer">Fail</string>
    <string name="no_postulation_found">No offers</string>

    <string name="no_offer_found">No Offer Found</string>
    <string name="duration_price_proposed_not_inserted">you should insert the duration and the price</string>
    <string name="postulation_added">applyment added with success</string>
    <string name="duration_price_proposed_not_valid">you should insert a valid duration and price</string>



</resources>