<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ChangeRoleActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="120dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="126dp"
        android:text="@string/TitleChangeRole"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="95dp"
        android:layout_marginEnd="71dp"
        android:layout_marginBottom="461dp"
        android:text="@string/DescriptionChangeRole"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView8"
        android:layout_marginStart="65dp"
        android:layout_marginTop="-500dp"
        android:scrollbarSize="20dp"
        android:text="@string/TitleChangeRole"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_below="@+id/textView8"
        android:layout_marginStart="12dp"
        android:layout_marginTop="-423dp"
        android:layout_marginEnd="12dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        tools:ignore="MissingConstraints">

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/radio_button_client"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@drawable/radio_button_client"
            android:button="@android:color/transparent"
            android:checked="true"
            android:gravity="center"
            android:text="@string/NameClient"
            android:textColor="#555252"
            android:textSize="17sp" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/radio_button_worker"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@drawable/radio_button_worker"
            android:button="@android:color/transparent"
            android:gravity="center"
            android:text="@string/NameWorker"
            android:textColor="#555252"
            android:textSize="17sp" />
    </RadioGroup>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="141dp"
        android:layout_height="55dp"
        android:layout_below="@+id/radioGroup"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="150dp"
        android:background="@drawable/button_rounded_teal_700"
        android:text="@string/SaveButton"
        android:textColor="@color/white"
        android:textSize="18dp"
        tools:ignore="MissingConstraints" />
</RelativeLayout>