<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ForgotPasswordMainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="84dp"
        android:gravity="center"
        android:textSize="25dp"
        android:fontFamily="@font/poppins_regular"

        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="101dp"
        android:layout_marginEnd="50dp"
        android:text="@string/forgotpassword"
        android:textColor="@color/black"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="50"
        />

    <TextView
        android:id="@+id/thewrongnumbermessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textInputLayoutPhone"
        android:layout_alignParentStart="true"
        android:layout_marginStart="51dp"
        android:layout_marginBottom="-275dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/thewrongnumber"
        android:textColor="@color/red_decline"
        android:visibility="invisible" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutPhone"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="wrap_content"
        android:layout_height="89dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="51dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="51dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/shadow_input_text_layout_signup"
        android:elevation="19dp"
        android:hint="@string/phone"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusTopStart="15dp"
        app:boxStrokeColor="@color/mtrl_textinput_default_box_stroke_color"
        app:endIconMode="clear_text"
        app:hintTextColor="@color/mtrl_textinput_default_box_stroke_color"
        tools:ignore="PrivateResource">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="phone"
            android:maxLines="1"
            android:padding="20dp"
            android:background="@android:color/transparent"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/tosms"

        android:layout_width="209dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"

        android:layout_gravity="center_horizontal"
        android:layout_marginStart="102dp"
        android:layout_marginTop="500dp"
        android:layout_marginEnd="100dp"
        android:background="@drawable/buttonradius"
        android:backgroundTint="@color/bricoliblue"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/find"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="18dp">

    </androidx.appcompat.widget.AppCompatButton>


</RelativeLayout>

