<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.EditProfileActivity"
    android:layout_margin="40dp"
    >




    <ImageButton
        android:id="@+id/image_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/userphoto"
        android:backgroundTint="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"/>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutFullname"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="200dp"
        android:layout_marginRight="20dp"
        android:hint="@string/name_complet"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusTopStart="15dp"
        app:boxStrokeColor="@color/mtrl_textinput_default_box_stroke_color"
        app:hintTextColor="@color/mtrl_textinput_default_box_stroke_color"
        tools:ignore="PrivateResource"
        android:background="@drawable/shadow_input_text_layout_signup"
        android:elevation="19dp"
        app:endIconMode="clear_text"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1"
            android:padding="20dp"

            />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutPhone"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/phone"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusTopStart="15dp"
        app:boxStrokeColor="@color/mtrl_textinput_default_box_stroke_color"
        app:hintTextColor="@color/mtrl_textinput_default_box_stroke_color"
        tools:ignore="PrivateResource"
        android:background="@drawable/shadow_input_text_layout_signup"
        android:elevation="19dp"
        app:endIconMode="clear_text"
        android:layout_below="@+id/textInputLayoutFullname"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:maxLines="1"
            android:padding="20dp"

            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutAddress"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/address"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusTopStart="15dp"
        app:boxStrokeColor="@color/mtrl_textinput_default_box_stroke_color"
        app:hintTextColor="@color/mtrl_textinput_default_box_stroke_color"
        tools:ignore="PrivateResource"
        android:background="@drawable/shadow_input_text_layout_signup"
        android:elevation="19dp"
        app:endIconMode="clear_text"
        android:layout_below="@+id/textInputLayoutPhone"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:maxLines="1"
            android:padding="20dp"

            />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textInputLayoutAddress"
        android:layout_marginTop="50dp"
        android:elevation="19dp"
        android:text="@string/SaveButton"
        android:gravity="center"
        android:layout_centerInParent="true"/>







</RelativeLayout>